--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Webserver",
+  "name": "onlineCollab",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,5 +19,5 @@
     "ejs": "*",
     "express-session": "~1.2.0"
   },
-  "main": "app.js"
+  "main": "./bin/www"
 }
